# opengl-kitchen-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: Camera.cpp  Camera.h  colors.h  constants.h  kitchen.h  obj_loader.h  object.h  primitive.h  vertex.h
lib/camera/: Camera.cpp  Camera.h
lib/obj_loader/: obj_loader.cpp  obj_loader.h
lib/stb_image/: stb_image.h
lib/texture/: texture.cpp  texture.h
objects/lamp/: lamp.mtl
